CHATS_SIT/force-app/main/default/objects/Referral_Field_Mappings__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBMS_Field_API_Name__c</fullName>
        <label>CBMS Field API Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Object_Mapping__c</fullName>
        <label>Referral Object Mapping</label>
        <referenceTo>Referral_Object_Mapping__mdt</referenceTo>
        <relationshipLabel>Referral Field Mappings</relationshipLabel>
        <relationshipName>Referral_Field_Mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>isEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isEditable</label>
        <type>Checkbox</type>
    </fields>
    <label>Referral Field Mappings</label>
    <pluralLabel>Referral Field Mappings</pluralLabel>
</CustomObject>